--- a/auth-okhttp/build.gradle
+++ b/auth-okhttp/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -85,7 +85,7 @@ android {
 dependencies {
     implementation project(':auth')
 
-    compileOnly 'com.android.support:support-annotations:28.0.0'
+    compileOnly 'androidx.annotation:annotation:1.0.1'
 
     compileOnly 'com.squareup.okhttp3:okhttp:3.12.0'
     compileOnly 'javax.inject:javax.inject:1'
