--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -84,7 +84,7 @@ android {
 }
 
 dependencies {
-    compileOnly 'com.android.support:support-annotations:28.0.0'
+    compileOnly 'androidx.annotation:annotation:1.0.1'
 
     compileOnly 'javax.inject:javax.inject:1'
 
