--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0-beta04'
+        classpath 'com.android.tools.build:gradle:4.2.0-rc01'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         
 
