Remove bintray and update publishing

--- a/auth-okhttp/build.gradle
+++ b/auth-okhttp/build.gradle
@@ -1,11 +1,8 @@
-plugins {
-    id "com.jfrog.bintray" version "1.8.1"
-}
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
 
 group = 'com.davidmedenjak.auth'
-version = '0.3.0'
+version = '0.3.0-SNAPSHOT'
 
 android {
     compileSdkVersion project.compileSdkVersion
@@ -15,7 +12,10 @@ android {
         targetSdkVersion 28
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
 
+    buildFeatures {
+        buildConfig = false
     }
 
     buildTypes {
@@ -31,27 +31,46 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
-    libraryVariants.all {
-        it.generateBuildConfig.enabled = false
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+            withJavadocJar()
+        }
     }
 }
 
-bintray {
-    user = 'bleeding182'
-    key = System.getenv('BINTRAY_KEY')
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
 
-    pkg {
-        repo = 'bleeding182'
-        name = 'auth-okhttp'
-        licenses = ['MIT']
-        vcsUrl = 'https://github.com/bleeding182/auth'
-        version {
-            name = project.version
-            desc = ''
-            vcsTag = System.getenv('TRAVIS_TAG')
+                // You can then customize attributes of the publication as shown below.
+                artifactId = 'auth-okhttp'
+                pom {
+                    name = "Auth OkHttp"
+                    description = "OkHttp integrations for the auth lib"
+                    url = "https://github.com/bleeding182/auth"
+                    licenses {
+                        license {
+                            name = "MIT License"
+                            url = "https://github.com/bleeding182/auth/blob/master/LICENSE"
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = "bleeding182"
+                            name = "David Medenjak"
+                        }
+                    }
+                    scm {
+                        connection = "scm:git:git://github.com/bleeding182/auth"
+                        url = "https://github.com/bleeding182/auth"
+                    }
+                }
+            }
         }
-        configurations = ['archives']
     }
 }
 
